Update show toast

--- a/QuanLyThuChi/QuanLyThuChi.Android/QuanLyThuChi.Android.csproj
+++ b/QuanLyThuChi/QuanLyThuChi.Android/QuanLyThuChi.Android.csproj
@@ -73,6 +73,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="SplashActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Toast_Android.cs" />
     <LinkDescription Include="LinkerSettings.xml" />
   </ItemGroup>
   <ItemGroup>
