--- a/QuanLyThuChi/QuanLyThuChi.iOS/QuanLyThuChi.iOS.csproj
+++ b/QuanLyThuChi/QuanLyThuChi.iOS/QuanLyThuChi.iOS.csproj
@@ -101,6 +101,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Toast_IOS.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <LinkDescription Include="LinkerSettings.xml" />
