--- a/QuanLyThuChi/QuanLyThuChi/QuanLyThuChi.csproj
+++ b/QuanLyThuChi/QuanLyThuChi/QuanLyThuChi.csproj
@@ -27,6 +27,9 @@
     <EmbeddedResource Update="Views\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\KhoanThuChiDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MorePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
