--- a/QuanLyThuChi/QuanLyThuChi/QuanLyThuChi.csproj
+++ b/QuanLyThuChi/QuanLyThuChi/QuanLyThuChi.csproj
@@ -36,6 +36,9 @@
     <EmbeddedResource Update="Views\SearchPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\UpdatePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
