--- a/QuanLyThuChi/QuanLyThuChi.iOS/QuanLyThuChi.iOS.csproj
+++ b/QuanLyThuChi/QuanLyThuChi.iOS/QuanLyThuChi.iOS.csproj
@@ -197,6 +197,12 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microcharts">
+      <Version>0.9.5.9</Version>
+    </PackageReference>
+    <PackageReference Include="Microcharts.Forms">
+      <Version>0.9.5.9</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.8.116</Version>
     </PackageReference>
