--- a/QuanLyThuChi/QuanLyThuChi.Android/QuanLyThuChi.Android.csproj
+++ b/QuanLyThuChi/QuanLyThuChi.Android/QuanLyThuChi.Android.csproj
@@ -70,6 +70,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.8.116</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>5.0.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials.Interfaces" Version="1.7.0" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="8.1.97" />
