--- a/QuanLyThuChi/QuanLyThuChi.Android/QuanLyThuChi.Android.csproj
+++ b/QuanLyThuChi/QuanLyThuChi.Android/QuanLyThuChi.Android.csproj
@@ -157,5 +157,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\back.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\add_more.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
