--- a/QuanLyThuChi/QuanLyThuChi.iOS/QuanLyThuChi.iOS.csproj
+++ b/QuanLyThuChi/QuanLyThuChi.iOS/QuanLyThuChi.iOS.csproj
@@ -203,6 +203,9 @@
     <PackageReference Include="Microcharts.Forms">
       <Version>0.9.5.9</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Multilingual">
+      <Version>1.0.2</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.8.116</Version>
     </PackageReference>
